--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
   </head>
   <body>
     <header>
-      <h1>Beetroot (<i>Beta Vulgaris</i>)
+      <h1>Beetroot (<i>Beta Vulgaris</i>)</h1>
+
+      <nav>
+        <ol>
+          <li> <a href="#">Common varieties</a> </li>
+          <li> <a href="#">Nutritional information</a> </li>
+          <li> <a href="#">Tags</a> </li>
+        </ol>
+      </nav>
+
+
     </header>
 
   </body>
