--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         </ol>
       </nav>
 
+      <figure>
+        <img src="images/beets.jpg" alt="">
+        <figcaption>
+          A bundle of organic beets from a local farm food co-op program
+        </figcaption>
+
+
 
     </header>
 
