added paragraphs and quotes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Beetroot (Beta Vulgaris)</title>
+    <title>Beetroot (Beta vulgaris)</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
@@ -17,11 +17,27 @@
         </ol>
       </nav>
 
+      <main>
       <figure>
         <img src="images/beets.jpg" alt="">
         <figcaption>
           A bundle of organic beets from a local farm food co-op program
         </figcaption>
+
+
+        <p>55 to 65 days are needed from germination to harvest root.</p>
+
+        <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roased as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
+
+        <p>In fact Jim Halpert once said this about beets, "Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>".</p>
+
+        </figure>
+
+        <p><blockquote>I have some <i>weird</i> habits. For instance, <strong>I love beets.</strong>. Show me a salad bar and I will clean them out of their beets.<br>
+        - Chris Pratt</blockquote></p>
+
+      </main>
+
 
 
 
