--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
+    <figure>
     <header>
       <h1>Beetroot (<i>Beta Vulgaris</i>)</h1>
 
@@ -18,7 +19,7 @@
       </nav>
 
       <main>
-      <figure>
+
         <img src="images/beets.jpg" alt="">
         <figcaption>
           A bundle of organic beets from a local farm food co-op program
@@ -36,7 +37,46 @@
         <p><blockquote>I have some <i>weird</i> habits. For instance, <strong>I love beets.</strong>. Show me a salad bar and I will clean them out of their beets.<br>
         - Chris Pratt</blockquote></p>
 
-      </main>
+
+
+      <h2>Common varities</h2>
+      <ol>
+        <li>Albino</li>
+        <li>Bull's Blood</li>
+        <li>Chioggia</li>
+        <li>Detroit Dark Red</li>
+        <li>Early Wonder</li>
+      </ol>
+
+      <h2>Nutritional informaiton</h2>
+      <dt>Serving size:100 g</dt>
+      <data>
+      <dl>
+        <li>Energy: 180 kJ</li>
+        <li>Carbohydrates: 9.96 g</li>
+        <li>Fat: 0.18g</li>
+        <li>Protien:1.68 g</li>
+      </dl>
+    </data>
+  </main>
+
+<aside>
+    <h2>Tags</h2>
+    <ul>
+      <li>Crimson</li>
+      <li>Awesome</li>
+      <li>Pickle-able</li>
+      <li>Vegetable!</li>
+      <li>Delicious</li>
+    </ul>
+<aside>
+
+    
+    <footer>
+      <small>
+      <p>Source: <a href="http://wikipedia.com">Wikipedia</a>; Last modified: <time>Aug 30, 2014</time></p>
+      <small>
+    </footer>
 
 
 
