--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
         </ol>
       </nav>
 
-      <main>
+
 
         <img src="images/beets.jpg" alt="">
-        <figcaption>
+
           A bundle of organic beets from a local farm food co-op program
-        </figcaption>
+          </header>
+
 
 
         <p>55 to 65 days are needed from germination to harvest root.</p>
@@ -34,8 +35,8 @@
 
         </figure>
 
-        <p><blockquote>I have some <i>weird</i> habits. For instance, <strong>I love beets.</strong>. Show me a salad bar and I will clean them out of their beets.<br>
-        - Chris Pratt</blockquote></p>
+        <blockquote>I have some <i>weird</i> habits. For instance, <strong>I love beets.</strong>. Show me a salad bar and I will clean them out of their beets.<br>
+        - Chris Pratt</blockquote>
 
 
 
@@ -49,16 +50,14 @@
       </ol>
 
       <h2>Nutritional informaiton</h2>
-      <dt>Serving size:100 g</dt>
-      <data>
+        <p>Serving size: 100g</p>
       <dl>
-        <li>Energy: 180 kJ</li>
-        <li>Carbohydrates: 9.96 g</li>
-        <li>Fat: 0.18g</li>
-        <li>Protien:1.68 g</li>
+        <dt>Energy: 180 kJ</dt>
+        <dt>Carbohydrates: 9.96 g</dt>
+        <dt>Fat: 0.18g</dt>
+        <dt>Protien:1.68 g</dt>
       </dl>
-    </data>
-  </main>
+
 
 <aside>
     <h2>Tags</h2>
@@ -69,19 +68,19 @@
       <li>Vegetable!</li>
       <li>Delicious</li>
     </ul>
-<aside>
+</aside>
 
-    
+
     <footer>
       <small>
-      <p>Source: <a href="http://wikipedia.com">Wikipedia</a>; Last modified: <time>Aug 30, 2014</time></p>
-      <small>
+      Source: <a href="http://wikipedia.com">Wikipedia</a>; Last modified: Aug 30, 2014
+    </small>
     </footer>
 
 
 
 
-    </header>
+
 
   </body>
 </html>
