--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Beetroot (Beta vulgaris)</title>
@@ -52,10 +52,16 @@
       <h2>Nutritional informaiton</h2>
         <p>Serving size: 100g</p>
       <dl>
-        <dt>Energy: 180 kJ</dt>
-        <dt>Carbohydrates: 9.96 g</dt>
-        <dt>Fat: 0.18g</dt>
-        <dt>Protien:1.68 g</dt>
+
+        <dt>Energy:</dt>
+        <dd>180 kJ</dd>
+        <dt>Carbohydrates:</dt>
+        <dd>9.96 g</dd>
+        <dt>Fat:</dt>
+         <dd>0.18g</dd>
+        <dt>Protien:</dt>
+        <dd>1.68 g</dd>
+
       </dl>
 
 
