--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Beetroot (Beta vulgaris)</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-  </head>
-  <body>
-    <figure>
+<head>
+  <meta charset="utf-8">
+  <title>Beetroot (Beta vulgaris)</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
+<body>
+  <figure>
     <header>
       <h1>Beetroot (<i>Beta Vulgaris</i>)</h1>
 
@@ -18,20 +18,23 @@
         </ol>
       </nav>
 
+      <figure>
         <img src="images/beets.jpg" alt="">
-
+        <figcaption>
           A bundle of organic beets from a local farm food co-op program
-          </header>
+        </figcaption>
+      </figure>
+    </header>
 
-        <p>55 to 65 days are needed from germination to harvest root.</p>
+    <p>55 to 65 days are needed from germination to harvest root.</p>
 
-        <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roased as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
+    <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roased as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
 
-        <p>In fact Jim Halpert once said this about beets, "Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>".</p>
+    <p>In fact Jim Halpert once said this about beets, <q>Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i></q>.</p>
 
-        </figure>
+  </figure>
 
-        <blockquote>I have some <i>weird</i> habits. For instance, <strong>I love beets.</strong>. Show me a salad bar and I will clean them out of their beets.<br>
+        <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong>. Show me a salad bar and I will clean them out of their beets.<br>
         - Chris Pratt</blockquote>
 
       <h2>Common varities</h2>
@@ -74,6 +77,6 @@
       Source: <a href="http://wikipedia.com">Wikipedia</a>; Last modified: Aug 30, 2014
     </small>
     </footer>
-    
+
   </body>
 </html>
