--- a/index.html
+++ b/index.html
@@ -30,38 +30,36 @@
 
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roased as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
 
-    <p>In fact Jim Halpert once said this about beets, <q>Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i></q>.</p>
+    <p>In fact <cite>Jim Halpert</cite> once said this about beets,</p>
+    <blockquote><q>Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i></q>.</blockquote>
 
   </figure>
 
-        <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong>. Show me a salad bar and I will clean them out of their beets.<br>
-        - Chris Pratt</blockquote>
+  <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong>. Show me a salad bar and I will clean them out of their beets.<br><cite>- Chris Pratt</cite></blockquote>
 
-      <h2>Common varities</h2>
-      <ol>
-        <li>Albino</li>
-        <li>Bull's Blood</li>
-        <li>Chioggia</li>
-        <li>Detroit Dark Red</li>
-        <li>Early Wonder</li>
-      </ol>
+  <h2>Common varities</h2>
+  <ol>
+    <li>Albino</li>
+    <li>Bull's Blood</li>
+    <li>Chioggia</li>
+    <li>Detroit Dark Red</li>
+    <li>Early Wonder</li>
+  </ol>
 
-      <h2>Nutritional informaiton</h2>
-        <p>Serving size: 100g</p>
-      <dl>
+  <h2>Nutritional informaiton</h2>
+  <p>Serving size: 100g</p>
+  <dl>
+    <dt>Energy:</dt>
+    <dd>180 kJ</dd>
+    <dt>Carbohydrates:</dt>
+    <dd>9.96 g</dd>
+    <dt>Fat:</dt>
+    <dd>0.18g</dd>
+    <dt>Protien:</dt>
+    <dd>1.68 g</dd>
+  </dl>
 
-        <dt>Energy:</dt>
-        <dd>180 kJ</dd>
-        <dt>Carbohydrates:</dt>
-        <dd>9.96 g</dd>
-        <dt>Fat:</dt>
-         <dd>0.18g</dd>
-        <dt>Protien:</dt>
-        <dd>1.68 g</dd>
-
-      </dl>
-
-<aside>
+  <aside>
     <h2>Tags</h2>
     <ul>
       <li>Crimson</li>
@@ -70,13 +68,13 @@
       <li>Vegetable!</li>
       <li>Delicious</li>
     </ul>
-</aside>
+  </aside>
 
-    <footer>
-      <small>
+  <footer>
+    <small>
       Source: <a href="http://wikipedia.com">Wikipedia</a>; Last modified: Aug 30, 2014
     </small>
-    </footer>
+  </footer>
 
-  </body>
+</body>
 </html>
