--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
   <p>Serving size: 100g</p>
   <dl>
     <dt>Energy:</dt>
-    <dd>180 kJ</dd>
+    <data>180 kJ</data>
     <dt>Carbohydrates:</dt>
-    <dd>9.96 g</dd>
+    <data>9.96 g</data>
     <dt>Fat:</dt>
-    <dd>0.18g</dd>
+    <data>0.18g</data>
     <dt>Protien:</dt>
-    <dd>1.68 g</dd>
+    <data>1.68 g</data>
   </dl>
 
   <aside>
