fixing mistakes…added data tag

--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roased as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
 
     <p>In fact <cite>Jim Halpert</cite> once said this about beets,</p>
-    <blockquote><q>Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i></q>.</blockquote>
-
-  </figure>
+    <q>Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i></q>.
+</figure>
 
   <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong>. Show me a salad bar and I will clean them out of their beets.<br><cite>- Chris Pratt</cite></blockquote>
 
@@ -51,13 +50,13 @@
   <p>Serving size: 100g</p>
   <dl>
     <dt>Energy:</dt>
-    <dd>180 kJ</dd>
+    <dd><data value="180">180 kJ</data></dd>
     <dt>Carbohydrates:</dt>
-    <dd>9.96 g</dd>
+    <dd><data value="9.96">9.96 g</data></dd>
     <dt>Fat:</dt>
-    <dd>0.18g</dd>
+    <dd><data value="0.18g">0.18g</data></dd>
     <dt>Protien:</dt>
-    <dd>1.68 g</dd>
+    <dd><data value="1.68">1.68 g</data></dd>
   </dl>
 
   <aside>
